* x86: on an SSE2 only host, Valgrind in 32 bit mode now claims to be a
  Pentium 4.  3.10.1 wrongly claimed to be a Core 2, which is SSSE3.

* The JIT's register allocator is significantly faster, making the JIT
  as a whole somewhat faster, so JIT-intensive activities (like
  program startup) are modestly faster, around 5%.

* ==================== TOOL CHANGES ====================

* Memcheck:

  - A new monitor command 'xb <addr> <len>' shows the validity bits of
    <len> bytes at <addr>.  The monitor command 'xb' is easier to use
    than get_vbits when you need to associate byte data value with
    their corresponding validity bits.

  - The 'block_list' monitor command now accepts an optional argument
    'limited <max_blocks>' to control the nr of block addresses
    printed.

  - The C helper functions used to instrument loads on x86-linux and
    arm-linux (both 32-bit only) have been replaced by handwritten
    assembly sequences.  This gives speedups in the region of 0% to 7%
    for those targets only.

  - New command line option: --expensive-definedness-check=<yes|no> which
    is usefult to avoid occasional invalid complaints on optimised code.
    Watchout for runtime degradation: 25% have been observed but, as always,
    this is highly application specific.

* Massif:

  - New monitor command 'all_snapshots <filename>' that dumps all
    snapshots taken so far.

* Helgrind:

  - Significant memory reduction and moderate speedups for
    --history-level=full for applications accessing a lot of memory
    with many different stacktraces.

  - The default value for --conflict-cache-size=N has been doubled to
    2000000.  Users that were not using the default value should
    preferably also double the value they give.

    The default was changed due to the changes in the "full history"
    implementation.  Doubling the value gives on average a slightly more
    complete history and uses similar memory (or significantly less memory