@@ -3,6 +3,9 @@ Invalid write of size 1
  Address 0x........ is 0 bytes inside a block of size 772 free'd
    at 0x........: free (vg_replace_malloc.c:...)
    by 0x........: main (malloc2.c:49)
+ Block was alloc'd at
+   at 0x........: malloc (vg_replace_malloc.c:...)
+   by 0x........: main (malloc2.c:41)
 
 Invalid free() / delete / delete[] / realloc()
    at 0x........: free (vg_replace_malloc.c:...)
@@ -10,4 +13,7 @@ Invalid free() / delete / delete[] / realloc()
  Address 0x........ is 0 bytes inside a block of size 772 free'd
    at 0x........: free (vg_replace_malloc.c:...)
    by 0x........: main (malloc2.c:49)
+ Block was alloc'd at
+   at 0x........: malloc (vg_replace_malloc.c:...)
+   by 0x........: main (malloc2.c:41)
 
