@@ -1,3 +1,4 @@
 prog: partial_load
+vgopts: --keep-stacktraces=alloc-then-free
 stderr_filter: filter_allocs
 stderr_filter_args: partial_load.c
