@@ -12,4 +12,7 @@ Invalid free() / delete / delete[] / realloc()
    by 0x........: bbb (suppfree.c:17)
    by 0x........: aaa (suppfree.c:22)
    by 0x........: main (suppfree.c:36)
+ Block was alloc'd at
+   at 0x........: malloc (vg_replace_malloc.c:...)
+   by 0x........: main (suppfree.c:32)
 
