@@ -1,3 +1,3 @@
 prereq: ! ../../tests/arch_test ppc32 && ! ../../tests/arch_test ppc64 && ! ../../tests/arch_test s390x && ! ../../tests/mips_features mips-be
 prog: test-plo
-vgopts: -q --partial-loads-ok=yes
+vgopts: -q --partial-loads-ok=yes  --keep-stacktraces=alloc-then-free
